--- a/src/css/PetList.css
+++ b/src/css/PetList.css
@@ -37,6 +37,8 @@
 
 .update-button {
     margin-top: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
     padding: 10px 20px;
     background-color: #388e3c;
     color: #fff;
@@ -44,8 +46,13 @@
     border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
+    width: 100px;
 }
-
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .footer {
     display: flex;
     flex-direction: column;
