--- a/src/css/PetId.css
+++ b/src/css/PetId.css
@@ -191,6 +191,9 @@
 }
 
 .pet-info {
+  position: absolute;
+  top: 75px;
+  left: 100px;
   font-size: large;
   display: flex;
   flex-direction: column;
