--- a/src/css/PetList.css
+++ b/src/css/PetList.css
@@ -11,12 +11,14 @@
 .owners-list {
     margin-top: 20px;
     width: 100%;
+    background: rgba(0,0,0,0.05);
+    border-radius: 20px;
 }
 
 .pet-toggle-button {
-    background-color: #e6e6e6;
+    background-color: rgba(0,0,0,0.1);
     color: #333;
-    border: 2px solid #388e3c;
+    border: 2px solid rgb(88, 149, 100, 100);
     border-radius: 20px;
     padding: 10px 20px;
     cursor: pointer;
@@ -27,7 +29,7 @@
 }
 
 .pet-toggle-button.active {
-    background-color: #388e3c;
+    background-color: rgb(88, 149, 100, 100);
     color: #fff;
 }
 
@@ -40,7 +42,7 @@
     margin-left: 30px;
     margin-right: 30px;
     padding: 10px 20px;
-    background-color: #388e3c;
+    background-color: rgb(88, 149, 100, 100);
     color: #fff;
     border: none;
     border-radius: 10px;
